# ast-formula-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
doc/: formula.ebnf
src/: bin.rs  lib.rs  parser.rs
src/domain/: expr.rs
src/domain/expr/: binary_op.rs  constant_val.rs
src/parser/: constant_val_parser.rs  expr_parser.rs  factor_parser.rs  formula_parser.rs  paren_expr_parser.rs  term_parser.rs
