[package]
edition = "2021"
name = "ast-formula"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
ctrlc = {version = "3.2.2", optional = true}
nom = "7.1.1"

[features]
build-binary = ["ctrlc"]

[[bin]]
name = "calc"
path = "src/bin.rs"
required-features = ["build-binary"]
